<resources>
    <string name="app_name">GPSTracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="location_disabled">Location disabled</string>
    <string name="location_dialog_message">Do you want enable GPS?</string>
    <string name="ok">Yes</string>
    <string name="no">No</string>
    <string name="saveTrack">Save track?</string>
    <string name="time">Time:</string>
    <string name="speed">Speed:</string>
    <string name="distance">Distance:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="distance_on_main_screen">Distance: 0.0 km</string>
    <string name="speed_on_main_screen">Speed: 0.0 km/h</string>
    <string name="average_speed_on_main_screen">Average speed: 0.0 km/h</string>
    <string name="time_on_main_screen">Time: 00:00:00</string>
    <string name="empty_list">No saved tracks</string>
</resources>