<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:summary="@string/update_time_summary">

    <PreferenceCategory android:title="@string/location">
        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/loc_time_update_name"
            android:entryValues="@array/loc_time_update_value"
            android:key="update_time_key"
            android:title="@string/update_time"
            android:summary="@string/update_time_summary"
            android:icon="@drawable/ic_update_time"/>
        <ListPreference
            android:defaultValue="#FF000000"
            android:entries="@array/color_name"
            android:entryValues="@array/color_value"
            android:key="color_key"
            android:title="@string/track_color"
            android:summary="@string/track_color_summary"
            android:icon="@drawable/ic_circle"/>
    </PreferenceCategory>

</PreferenceScreen>